# shell-candy

./: Cargo.toml  LICENSE  README.md
examples/: no_rust_two_dot_oh.rs  passthrough.rs
src/: error.rs  lib.rs  log.rs  task.rs
src/task/: behavior.rs  mod.rs  output.rs  runner.rs
