[package]
name = "shell-candy"
version = "0.1.1"
edition = "2021"
authors = ["Avery Harnish <rust@averyharnish.com>"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/EverlastingBugstopper/shell-candy"
keywords = ["command", "task", "log", "shell", "posix"]
description = """
🍬 shell-candy wraps std::process::Command, providing a more straightforward mechanism for handling individual log lines.
"""

[dependencies]
crossbeam-channel = "0.5"
rayon = "1"
thiserror = "1"
which = "4"
