[package]
name = "shell-candy"
version = "0.4.0"
edition = "2021"
authors = ["Avery Harnish <rust@averyharnish.com>"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/EverlastingBugstopper/shell-candy"
keywords = ["command", "task", "log", "shell", "posix"]
description = """
🍬 shell-candy wraps std::process::Command, providing a more straightforward mechanism for handling individual log lines.
"""
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[dependencies]
crossbeam-channel = "0.5"
rayon = "1"
thiserror = "1"
which = "4"

[dev-dependencies]
anyhow = "1"
reqwest = { version = "0.11", features = ["blocking"] }
semver = "1"